[build-system]
requires = ["cython>=3.0", "pip>=23.0", "setuptools>=61.0", "wheel", "numpy"]
[project]
name = "environment"
version = "0.2.0"
description = "A Gymnasium environment for reinforcement learning powered by Pufferlib"
keywords = []
classifiers = [
	"Natural Language :: English",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS :: MacOS X",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "einops",
    "pufferlib[cleanrl,ray]>=2.0.0",
    "torch>=2.4",
    "triton>=3",
    "torchvision",
    "wandb",
    "gym==0.23",
    "matplotlib",
    "mediapy",
    "GPUtil",
    'numpy',
    'opencv-python==3.4.17.63',
    'rich',
    'rich_argparse',
    'gymnasium',
    'pettingzoo',
    'shimmy[gym-v21]',
    'psutil==5.9.5',
    'pynvml',
    'imageio'
]
[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
monitoring = [
    "nvitop"
]
dev = [
    "ruff"
]

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]